dev/test_programs/INVALID/group10/parser/go.go
// Go's _select_ lets you wait on multiple channel
// operations. Combining goroutines and channels with
// select is a powerful feature of Go.

package main



func main() {

     go func() {
     	return
    }()
   
}
